api keys now configurable